--- a/TODO
+++ b/TODO
@@ -3,3 +3,4 @@ Projeto : sistema web
 organizaçao :
   ✔ Criar o composer.json @done(24-07-17 22:39)
   ✔ Colocar no gitignore para ignora a subida do composer e compsoer lock @done(24-07-17 22:40)
+  ☐ criar o readme e subir no github
